objects/Borrower__c.object
<CustomObject>
    <description>C&amp;I Borrowers (Linked to Boarding Forms)</description>
    <fields>
        <fullName>Boarding_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Boarding Form</label>
        <referenceTo>Boarding_Form__c</referenceTo>
        <relationshipLabel>Borrowers</relationshipLabel>
        <relationshipName>Borrowers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BorrowerReadyForSubmmit_SFDC2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BorrowerReadyForSubmmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_Code__c</fullName>
        <inlineHelpText>A – Personal
B – Business Profit
C – Business Non-Profit
D – Employee/Direct Loan</inlineHelpText>
        <label>Class Code *</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A – Personal</fullName>
                </value>
                <value>
                    <fullName>B – Business Profit</fullName>
                </value>
                <value>
                    <fullName>C – Business Non-Profit</fullName>
                </value>
                <value>
                    <fullName>D – Employee/Direct Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_City__c</fullName>
        <label>Mailing Address City *</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Country__c</fullName>
        <label>Mailing Address Country *</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Postal_Code__c</fullName>
        <label>Mailing Address Postal Code *</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_State__c</fullName>
        <label>Mailing Address State *</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Street__c</fullName>
        <label>Mailing Address Street *</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <formula>IF( RecordReady__c , 
    &quot;This Borrower has all required fields populated&quot;, 
    &quot;Please fill out all &apos;*&apos; required fields prior to submitting the related BF for Approval.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RecordReady__c</fullName>
        <description>Check if the fields are empty</description>
        <formula>AND(  NOT ( ISBLANK(Mailing_Address_Street__c) ||  ISNULL(Mailing_Address_Street__c ) ), 
      NOT ( ISBLANK(Mailing_Address_City__c) ||  ISNULL(Mailing_Address_City__c ) ), 
      NOT ( ISBLANK(Mailing_Address_State__c) ||  ISNULL(Mailing_Address_State__c ) ) ,   
      NOT ( ISBLANK(Mailing_Address_Postal_Code__c) ||  ISNULL(Mailing_Address_Postal_Code__c ) ), 
      NOT ( ISBLANK(Mailing_Address_Country__c) ||  ISNULL(Mailing_Address_Country__c ) ), 
      NOT ( ISBLANK(Tax_ID_Number__c) ||  ISNULL(Tax_ID_Number__c ) ) ,  
      NOT ( ISBLANK(text(Tax_ID_Number_Types__c) ) ||  ISNULL(text(Tax_ID_Number_Types__c) ) ) , 
      NOT ( ISBLANK(text(Class_Code__c) ) ||  ISNULL(text(Class_Code__c) ) ) ,
      NOT ( ISBLANK(Source_Page_Legal_Name__c) ||  ISNULL(Source_Page_Legal_Name__c) ),       
      NOT ( ISBLANK(Source_Page_Street__c) ||  ISNULL(Source_Page_Street__c ) ), 
      NOT ( ISBLANK(Source_Page_City__c) ||  ISNULL(Source_Page_City__c ) ), 
      NOT ( ISBLANK(Source_Page_State__c) ||  ISNULL(Source_Page_State__c ) ) ,   
      NOT ( ISBLANK(Source_Page_Postal_Code__c) ||  ISNULL(Source_Page_Postal_Code__c ) ), 
      NOT ( ISBLANK(Source_Page_Country__c) ||  ISNULL(Source_Page_Country__c ) ), 
      NOT ( ISBLANK(Source_Page_TaxID__c) ||  ISNULL(Source_Page_TaxID__c) ) , 
      NOT ( ISBLANK(Source_Page_TaxID_Type__c) ||  ISNULL(Source_Page_TaxID_Type__c) ), 
      NOT ( ISBLANK(Source_Page_Class_Code__c) ||  ISNULL(Source_Page_Class_Code__c) ) 
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordReady</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Page_City__c</fullName>
        <description>City</description>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Page_Class_Code__c</fullName>
        <description>Class Code</description>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Page_Country__c</fullName>
        <description>Country</description>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Page_Email__c</fullName>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Page_Legal_Name__c</fullName>
        <description>Legal Name</description>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Page_Phone__c</fullName>
        <description>Phone</description>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Page_Postal_Code__c</fullName>
        <description>Postal Code</description>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Page_State__c</fullName>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Page_Street__c</fullName>
        <description>Street</description>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Page_TaxID_Type__c</fullName>
        <description>Tax ID Number Type</description>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Page_TaxID__c</fullName>
        <description>Tax ID</description>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_ID_Number_Types__c</fullName>
        <label>Tax ID Number Types *</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tax_ID_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_ID_Number__c</fullName>
        <label>Tax ID Number *</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Borrower</label>
    <nameField>
        <label>Borrower Legal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Borrowers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Borrower_Phone_Number_Format</fullName>
        <active>true</active>
        <description>Enforces 10 digits, no characters. Allows parentheses and dash for the data loader.</description>
        <errorConditionFormula>NOT(
OR(
ISBLANK(Phone_Number__c ),
REGEX( Phone_Number__c  , &quot;\\D*?(\\d\\D*?){10}&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Phone_Number__c</errorDisplayField>
        <errorMessage>Verify the phone number is in the format: (999) 999-9999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Borrower_Postal_Code_Numeric</fullName>
        <active>true</active>
        <description>Validates that the BWR Postal Code field only contains numeric values</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Mailing_Address_Postal_Code__c)),
NOT(ISNUMBER(Mailing_Address_Postal_Code__c))
)</errorConditionFormula>
        <errorDisplayField>Mailing_Address_Postal_Code__c</errorDisplayField>
        <errorMessage>Only numeric characters are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Borrower_State_Alphabetic</fullName>
        <active>true</active>
        <description>Validates that the BWR Mailing State field only contains letters</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Mailing_Address_State__c)),
NOT(REGEX(Mailing_Address_State__c, &quot;[a-zA-Z]*(\\s[a-zA-Z]*)?&quot;))
)</errorConditionFormula>
        <errorDisplayField>Mailing_Address_State__c</errorDisplayField>
        <errorMessage>Only letters and a single space are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Borrower_Tax_ID_Number_TIN_Format</fullName>
        <active>true</active>
        <description>Requires formats: 
 &quot;XXX-XX-XXXX&quot; where X is digit 0-9</description>
        <errorConditionFormula>NOT(
    OR( ISBLANK( Tax_ID_Number__c ),
        REGEX( Tax_ID_Number__c , &quot;[\\d]{3}-[\\d]{2}-[\\d]{4}&quot; ),
        REGEX( Tax_ID_Number__c , &quot;[\\d]{2}-[\\d]{7}&quot; )
      )
)</errorConditionFormula>
        <errorDisplayField>Tax_ID_Number__c</errorDisplayField>
        <errorMessage>Borrower Tax ID Number must be in format  &quot;XXX-XX-XXXX&quot; or &quot;XX-XXXXXXX&quot; including the dash(es), where X is a 0-9 digit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SFDC2_Borrower_RecordLocked</fullName>
        <active>false</active>
        <description>The User can&apos;t change the valoues of this record to avoid modifications in the Approval Flow</description>
        <errorConditionFormula>AND(
      $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
      OR(  ISPICKVAL(Boarding_Form__r.BF_Status__c, &quot;BF Submitted for Pre-Approval&quot;) ,
           ISPICKVAL(Boarding_Form__r.BF_Status__c, &quot;BF Submitted for Approval&quot;) ,
           ISPICKVAL(Boarding_Form__r.BF_Status__c, &quot;BF Approved&quot;) 

        ),
      RecordReady__c     
)</errorConditionFormula>
        <errorMessage>You can not modify this record because the related BF is pending to be approved or approved, contact your administrator.</errorMessage>
    </validationRules>
</CustomObject>